--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
+    "postcss": "^7.0.35",
     "register-service-worker": "^1.7.1",
+    "swiper": "^6.4.11",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
