--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "notyf": "^3.9.0",
     "postcss": "^7.0.35",
     "register-service-worker": "^1.7.1",
     "swiper": "^6.4.11",
